syntax = "proto3";
package sequencer;
import "bignum.proto";

option java_multiple_files = true;
option java_package = "xyz.funkybit.sequencer.proto";
option java_outer_classname = "TradeSchema";

message TradeCreated {
  uint64 buyOrderGuid = 1;
  uint64 sellOrderGuid = 2;
  IntegerValue amount = 3;
  int32 levelIx = 4;
  IntegerValue buyerFee = 5;
  IntegerValue sellerFee = 6;
  string marketId = 7;
  bool takerSold = 8;
}
